@@ -39,6 +39,10 @@ dnl **************************
 dnl Check for librapi2
 PKG_CHECK_MODULES(LIBRAPI2, librapi2 >= 0.11)
 
+AC_ARG_ENABLE(update-mime-database,
+        AC_HELP_STRING([--disable-update-mime-database],
+       [do not run the update-mime-database utility (mostly useful for package maintainers) ]))
+AM_CONDITIONAL(UPDATE_MIME_DATABASE, test "$enable_update_mime_database" != "no")
 
 dnl ****************************
 dnl *** Checks for intltool  ***
@@ -77,4 +81,5 @@ AC_OUTPUT([
 	common/Makefile
 	pixmaps/Makefile
 	po/Makefile.in
+	data/Makefile
 ])
